hphp/test/slow/enum_class/enum_class06.php.expectf

Fatal error: Class D may not inherit from enum (B) in %s/enum_class06.php on line 5
